--- a/src/app/feed/feed.component.styl
+++ b/src/app/feed/feed.component.styl
@@ -1,7 +1,11 @@
 :host
-  display block
   width 1000px
   margin 0 auto
+  display flex
+  flex-wrap: wrap
+  justify-content space-between
 
 .item
-  width 260px
+  width 32%
+  margin-bottom 20px
+  box-sizing border-box
