--- a/src/app/feed/feed.component.styl
+++ b/src/app/feed/feed.component.styl
@@ -2,10 +2,25 @@
   width 1000px
   margin 0 auto
   display flex
-  flex-wrap: wrap
+  justify-content flex-end
+
+.feed
+  display flex
+  flex-grow 1
+  flex-wrap wrap
   justify-content space-between
 
-.item
-  width 32%
-  margin-bottom 20px
-  box-sizing border-box
+  &-item
+    width 32%
+    margin-bottom 20px
+    box-sizing border-box
+
+.form
+  width 160px
+  display flex
+  margin 0 20px
+  flex-shrink 0
+  flex-direction column
+
+  & > *
+    margin-bottom 20px
