Card Actions were added

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -7,6 +7,10 @@
       <md-card-title>{{feedItem.title}}</md-card-title>
       <md-card-subtitle>{{feedItem.description}}</md-card-subtitle>
     </md-card-content>
+    <md-card-actions class="actions">
+      <md-icon svgIcon="thumbs-up"></md-icon>
+      <button md-button>SHARE</button>
+    </md-card-actions>
   </md-card>
 </div>
 <form class="form">
