--- a/src/app/feed/feed.component.styl
+++ b/src/app/feed/feed.component.styl
@@ -8,19 +8,23 @@
   display flex
   flex-grow 1
   flex-wrap wrap
-  justify-content space-between
 
   &-item
     width 32%
-    margin-bottom 20px
+    margin 0 1.3% 1.3% 0
     box-sizing border-box
 
 .form
-  width 160px
+  width 180px
   display flex
-  margin 0 20px
+  margin-left 10px
   flex-shrink 0
   flex-direction column
 
   & > *
     margin-bottom 20px
+
+.actions
+  display flex
+  align-items center
+  justify-content flex-end
