It's Sandwich Club for now

--- a/src/app/header/header.component.styl
+++ b/src/app/header/header.component.styl
@@ -1,9 +1,9 @@
 :host
   display flex
   width 1000px
-  margin 0 auto
   align-items center
+  margin 10px auto
 
 .logo
-  width 64px
   height 64px
+  margin-right 20px
