--- a/src/app/menu/menu.component.styl
+++ b/src/app/menu/menu.component.styl
@@ -1,14 +1,13 @@
 :host
   display flex
   width 1000px
-  margin 0 auto
+  margin 0 auto 20px auto
+  justify-content space-between
 
 .item
-  padding 5px 0
-  cursor pointer
-  font-size 20px
-  margin 20px 40px 20px 0
-  border-bottom: 3px solid transparent
+  width 49%
+  box-sizing border-box
 
-  &:hover
-    border-bottom-color #d7e1e5
+.image
+  height 300px
+  object-fit cover
