--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,9 +1,8 @@
 <div class="feed">
-  <md-card class="feed-item"
+  <md-card class="item"
     *ngFor="let feedItem of feed | filter: searchValue | order: filterValue; trackBy feedItem?.id">
-    <img md-card-image src="{{feedItem.image}}">
+    <img class="image" md-card-image src="{{feedItem.image}}">
     <md-card-content>
-      <div>{{feedItem.date}}</div>
       <md-card-title>{{feedItem.title}}</md-card-title>
       <md-card-subtitle>{{feedItem.description}}</md-card-subtitle>
     </md-card-content>
