--- a/src/app/feed/feed.component.styl
+++ b/src/app/feed/feed.component.styl
@@ -9,10 +9,14 @@
   flex-grow 1
   flex-wrap wrap
 
-  &-item
-    width 32%
-    margin 0 1.3% 1.3% 0
-    box-sizing border-box
+.item
+  width 32%
+  margin 0 1.3% 1.3% 0
+  box-sizing border-box
+
+.image
+  height 180px
+  object-fit cover
 
 .form
   width 180px
