--- a/src/app/menu/menu.component.styl
+++ b/src/app/menu/menu.component.styl
@@ -1,13 +1,4 @@
 :host
-  display flex
   width 1000px
+  display block
   margin 0 auto 20px auto
-  justify-content space-between
-
-.item
-  width 49%
-  box-sizing border-box
-
-.image
-  height 300px
-  object-fit cover
