Rating system was added

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -5,9 +5,9 @@
     <md-card-content>
       <md-card-title>{{feedItem.title}}</md-card-title>
       <md-card-subtitle>{{feedItem.description}}</md-card-subtitle>
+      <app-rating max="5" rate="{{ feedItem.rating }}" align="center"></app-rating>
     </md-card-content>
     <md-card-actions class="actions">
-      <md-icon svgIcon="thumbs-up"></md-icon>
       <button md-button>SHARE</button>
     </md-card-actions>
   </md-card>
