New header and login button

--- a/src/app/header/header.component.styl
+++ b/src/app/header/header.component.styl
@@ -1,9 +1,16 @@
 :host
   display flex
   width 1000px
-  align-items center
   margin 10px auto
+  align-items center
+  justify-content: space-between;
 
 .logo
   height 64px
-  margin-right 20px
+
+h1
+  margin: 0
+  color wheat
+  font-size 50px
+  text-shadow 2px 2px 0px grey
+  font-family 'Marck Script', cursive
