--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
 <img class="logo" src="/assets/logo.png">
 <h1>Sandwich Club</h1>
+<a md-raised-button routerLink="/login" color="primary">Login</a>
 
