Logo is a link now

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<img class="logo" src="/assets/logo.png">
+<a routerLink="">
+  <img class="logo" src="/assets/logo.png">
+</a>
 <h1>Sandwich Club</h1>
 <a md-raised-button routerLink="/login" color="primary">Login</a>
 
