--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,7 @@
   <img class="logo" src="/assets/logo.png">
 </a>
 <h1>Sandwich Club</h1>
-<a md-raised-button routerLink="/login" color="primary">Login</a>
+<a *ngIf="!isLoggedIn" md-raised-button routerLink="/login" color="primary">Login</a>
+<a *ngIf="isLoggedIn" md-raised-button (click)="logout()">Logout</a>
+
 
