Menu and profile info for header were added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,51 @@
 <a routerLink="">
-  <img class="logo" src="/assets/logo.png">
+  <img class="icon" src="/assets/logo.png">
 </a>
-<h1>Sandwich Club</h1>
-<a *ngIf="!loginService.loggedIn" md-raised-button routerLink="/login" color="primary">Login</a>
-<a *ngIf="loginService.loggedIn" md-raised-button (click)="logout()">Logout</a>
+<h1 class="logo">Sandwich Club</h1>
+<div class="info">
+  <a *ngIf="loginService.loggedIn" routerLink="/profiles/{{loginService.profile.id}}" class="link">
+    <img class="avatar" src="{{loginService.profile.image}}">
+    <div class="name">
+      {{loginService.profile.name}}
+    </div>
+  </a>
+  <button md-icon-button [mdMenuTriggerFor]="menu">
+    <md-icon>more_vert</md-icon>
+  </button>
+  <md-menu #menu="mdMenu">
+    <button md-menu-item routerLink="/constructor">
+      <md-icon>room_service</md-icon>
+      <span>Constructor</span>
+    </button>
+    <button md-menu-item routerLink="/generator">
+      <md-icon>kitchen</md-icon>
+      <span>Generator</span>
+    </button>
+    <button md-menu-item routerLink="/search">
+      <md-icon>search</md-icon>
+      <span>Search</span>
+    </button>
+    <button md-menu-item routerLink="/settings">
+      <md-icon>settings</md-icon>
+      <span>Settings</span>
+    </button>
+    <button *ngIf="!loginService.loggedIn" md-menu-item routerLink="/signup">
+      <md-icon>person_add</md-icon>
+      <span>Sign up</span>
+    </button>
+    <button *ngIf="!loginService.loggedIn" md-menu-item routerLink="/login">
+      <md-icon>fingerprint</md-icon>
+      <span>Login</span>
+    </button>
+    <button *ngIf="loginService.loggedIn" md-menu-item routerLink="/bug">
+      <md-icon>bug_report</md-icon>
+      <span>Report bug</span>
+    </button>
+    <button *ngIf="loginService.loggedIn" md-menu-item (click)="logout()">
+      <md-icon>directions_walk</md-icon>
+      <span>Logout</span>
+    </button>
+  </md-menu>
+</div>
 
 
