--- a/src/app/header/header.component.styl
+++ b/src/app/header/header.component.styl
@@ -1,16 +1,38 @@
 :host
-  display flex
   width 1000px
   margin 10px auto
+  display flex
   align-items center
-  justify-content: space-between;
+  justify-content space-between
 
-.logo
+.icon
   height 64px
 
-h1
+.logo
   margin: 0
   color wheat
   font-size 50px
   text-shadow 2px 2px 0px grey
   font-family 'Marck Script', cursive
+
+.info
+  display flex
+  align-items center
+
+.link
+  color black
+  display flex
+  align-items center
+  text-decoration none
+
+.name
+  margin 0 10px
+  font-size 25px
+  font-family 'Marck Script', cursive
+
+.avatar
+  width 50px
+  height 50px
+  border-radius 50%
+  object-fit contain
+
