--- a/src/app/feed/feed.component.styl
+++ b/src/app/feed/feed.component.styl
@@ -34,3 +34,14 @@
   display flex
   align-items center
   justify-content flex-end
+
+.title
+  text-align center
+
+.link
+  color black
+  text-decoration none
+  font-family 'Marck Script', cursive
+
+  &:hover
+    color #3f51b5
