--- a/src/app/sandwich/sandwich.component.styl
+++ b/src/app/sandwich/sandwich.component.styl
@@ -11,4 +11,50 @@
 
 .title
   font-size 50px
+  margin 20px 0
+  text-align center
   font-family 'Marck Script', cursive
+
+.description
+  padding 20px
+  margin 30px 0 20px 0
+  border-radius 8px
+  border 1px solid black
+  box-sizing border-box
+
+  &-title
+    font-size 24px
+    font-family 'Marck Script', cursive
+
+.stats
+  padding 20px
+  border-radius 8px
+  margin-right 20px
+  margin-bottom 20px
+  border 1px solid black
+  box-sizing border-box
+
+  &-name
+    font-family 'Marck Script', cursive
+
+  &-title
+    font-size 24px
+    font-family 'Marck Script', cursive
+
+.ingredients
+  flex-grow 1
+  padding 20px
+  border-radius 8px
+  margin-bottom 20px
+  border 1px solid black
+  box-sizing border-box
+
+  &-title
+    font-size 24px
+    font-family 'Marck Script', cursive
+
+.ingredient
+  width 100%
+
+.row
+  display flex
