--- a/src/styles.styl
+++ b/src/styles.styl
@@ -6,3 +6,13 @@ html
 
 body
   margin 0
+
+*::selection {
+  color: white;
+  background: #3f51b5;
+}
+
+*::-moz-selection{
+  color: white;
+  background: #3f51b5;
+}
