--- a/src/app/sandwich/sandwich.component.styl
+++ b/src/app/sandwich/sandwich.component.styl
@@ -19,7 +19,6 @@
   padding 20px
   margin 30px 0 20px 0
   border-radius 8px
-  border 1px solid black
   box-sizing border-box
 
   &-title
@@ -29,12 +28,17 @@
 .stats
   padding 20px
   border-radius 8px
-  margin-right 20px
   margin-bottom 20px
-  border 1px solid black
   box-sizing border-box
 
+  &-item
+    display flex
+    justify-content space-between
+
   &-name
+    font-size 20px
+    margin-right 20px
+    text-transform capitalize
     font-family 'Marck Script', cursive
 
   &-title
@@ -45,16 +49,27 @@
   flex-grow 1
   padding 20px
   border-radius 8px
-  margin-bottom 20px
-  border 1px solid black
   box-sizing border-box
 
   &-title
     font-size 24px
     font-family 'Marck Script', cursive
 
-.ingredient
-  width 100%
+.calorie
+  border-radius 8px
+  font-family 'Marck Script', cursive
+
+  &-description
+    font-size 20px
+
+  &-title
+    font-size 24px
 
 .row
   display flex
+  margin-bottom 20px
+
+.column
+  display flex
+  margin-right 20px
+  flex-direction column
