--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -12,7 +12,7 @@
       <app-rating max="5" rate="{{ sandwich.rating }}" align="center"></app-rating>
     </md-card-content>
     <md-card-actions class="actions">
-      <button md-button>SHARE</button>
+      <button mat-button>SHARE</button>
     </md-card-actions>
   </md-card>
 </div>
