--- a/src/app/rating/rating.component.html
+++ b/src/app/rating/rating.component.html
@@ -1,5 +1,5 @@
 <div>
-  <md-icon *ngFor="let mod of stars">
+  <mat-icon *ngFor="let mod of stars">
     star{{ mod }}
-  </md-icon>
+  </mat-icon>
 </div>
