--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,43 +9,43 @@
       {{loginService.profile.name}}
     </div>
   </a>
-  <button md-icon-button [mdMenuTriggerFor]="menu">
-    <md-icon>more_vert</md-icon>
+  <button mat-icon-button [mat-menu-trigger-for]="menu">
+    <mat-icon>more_vert</mat-icon>
   </button>
-  <md-menu #menu="mdMenu">
-    <button md-menu-item routerLink="/constructor">
-      <md-icon>room_service</md-icon>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item routerLink="/constructor">
+      <mat-icon>room_service</mat-icon>
       <span>Constructor</span>
     </button>
-    <button md-menu-item routerLink="/generator">
-      <md-icon>kitchen</md-icon>
+    <button mat-menu-item routerLink="/generator">
+      <mat-icon>kitchen</mat-icon>
       <span>Generator</span>
     </button>
-    <button md-menu-item routerLink="/search">
-      <md-icon>search</md-icon>
+    <button mat-menu-item routerLink="/search">
+      <mat-icon>search</mat-icon>
       <span>Search</span>
     </button>
-    <button md-menu-item routerLink="/settings">
-      <md-icon>settings</md-icon>
+    <button mat-menu-item routerLink="/settings">
+      <mat-icon>settings</mat-icon>
       <span>Settings</span>
     </button>
-    <button *ngIf="!loginService.loggedIn" md-menu-item routerLink="/signup">
-      <md-icon>person_add</md-icon>
+    <button *ngIf="!loginService.loggedIn" mat-menu-item routerLink="/signup">
+      <mat-icon>person_add</mat-icon>
       <span>Sign up</span>
     </button>
-    <button *ngIf="!loginService.loggedIn" md-menu-item routerLink="/login">
-      <md-icon>fingerprint</md-icon>
+    <button *ngIf="!loginService.loggedIn" mat-menu-item routerLink="/login">
+      <mat-icon>fingerprint</mat-icon>
       <span>Login</span>
     </button>
-    <button *ngIf="loginService.loggedIn" md-menu-item routerLink="/bug">
-      <md-icon>bug_report</md-icon>
+    <button *ngIf="loginService.loggedIn" mat-menu-item routerLink="/bug">
+      <mat-icon>bug_report</mat-icon>
       <span>Report bug</span>
     </button>
-    <button *ngIf="loginService.loggedIn" md-menu-item (click)="logout()">
-      <md-icon>directions_walk</md-icon>
+    <button *ngIf="loginService.loggedIn" mat-menu-item (click)="logout()">
+      <mat-icon>directions_walk</mat-icon>
       <span>Logout</span>
     </button>
-  </md-menu>
+  </mat-menu>
 </div>
 
 
