--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="loginForm" (ngSubmit)="login()">
   <div class="title">Login</div>
-  <md-input-container>
-    <input mdInput type="email" placeholder="Email" formControlName="email">
-  </md-input-container>
-  <md-input-container>
-    <input mdInput type="password" placeholder="Password" formControlName="password">
-  </md-input-container>
-  <a md-raised-button color="accent" routerLink=".">Sign Up</a>
-  <button md-raised-button [disabled]="!loginForm.valid" color="primary" type="submit">Login</button>
+  <mat-input-container>
+    <input matInput type="email" placeholder="Email" formControlName="email">
+  </mat-input-container>
+  <mat-input-container>
+    <input matInput type="password" placeholder="Password" formControlName="password">
+  </mat-input-container>
+  <a mat-raised-button color="accent" routerLink=".">Sign Up</a>
+  <button mat-raised-button [disabled]="!loginForm.valid" color="primary" type="submit">Login</button>
 </form>
