--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,7 +1,7 @@
-<md-card class="item" *ngFor="let item of menu" routerLink="{{ item.href }}">
-  <img class="image" md-card-image src="{{ item.image }}">
-  <md-card-content>
-    <md-card-title class="title">{{ item.title }}</md-card-title>
-    <md-card-subtitle class="description">{{ item.description }}</md-card-subtitle>
-  </md-card-content>
-</md-card>
+<mat-card class="item" *ngFor="let item of menu" routerLink="{{ item.href }}">
+  <img class="image" mat-card-image src="{{ item.image }}">
+  <mat-card-content>
+    <mat-card-title class="title">{{ item.title }}</mat-card-title>
+    <mat-card-subtitle class="description">{{ item.description }}</mat-card-subtitle>
+  </mat-card-content>
+</mat-card>
