--- a/src/app/login/login.component.styl
+++ b/src/app/login/login.component.styl
@@ -4,7 +4,7 @@
   text-align right
   justify-content center
 
-md-input-container
+mat-input-container
   display block
   margin 30px 0
   width 280px
