--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
-<nav md-tab-nav-bar>
-  <a md-tab-link *ngFor="let link of links" routerLink="{{ link.href }}" class="menu-item"
+<nav mat-tab-nav-bar>
+  <a mat-tab-link *ngFor="let link of links" routerLink="{{ link.href }}" class="menu-item"
      [active]="rla.isActive" routerLinkActive #rla="routerLinkActive">
     {{link.title}}
   </a>
