--- a/src/app/sandwich/sandwich.component.html
+++ b/src/app/sandwich/sandwich.component.html
@@ -23,7 +23,7 @@
     <mat-card class="ingredients">
       <div class="ingredients-title">Ingredients</div>
         <ul>
-          <li *ngFor="let ingredient of sandwich.ingredients">{{ ingredient.name }}</li>
+          <li *ngFor="let ingredient of sandwich.ingredients">{{ ingredient }}</li>
         </ul>
     </mat-card>
   </div>
