--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,6 +1,6 @@
 <div class="feed">
   <mat-card class="item"
-    *ngFor="let sandwich of feed | filter: searchValue | order: filterValue; trackBy: sandwich?.id">
+            *ngFor="let sandwich of feed | filter: searchValue | order: filterValue; trackBy: sandwich?.id">
     <img class="image" mat-card-image src="{{sandwich.image}}">
     <mat-card-content>
       <mat-card-title class="title">
@@ -9,7 +9,7 @@
         </a>
       </mat-card-title>
       <mat-card-subtitle>{{sandwich.description}}</mat-card-subtitle>
-      <app-rating max="5" rate="{{ sandwich.rating }}" align="center"></app-rating>
+      <app-rating [max]="5" [rate]="sandwich.rating" align="center"></app-rating>
     </mat-card-content>
     <mat-card-actions class="actions">
       <button mat-button>SHARE</button>
