--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <a routerLink="">
-  <img class="icon" src="/assets/logo.png">
+  <img class="icon" src="/assets/img/logo.png">
 </a>
 <h1 class="logo">Sandwich Club</h1>
 <div class="info">
