--- a/src/app/header/header.component.styl
+++ b/src/app/header/header.component.styl
@@ -12,7 +12,7 @@
   margin: 0
   color wheat
   font-size 50px
-  text-shadow 2px 2px 0px grey
+  text-shadow 2px 2px 0 grey
   font-family 'Marck Script', cursive
 
 .info
