--- a/src/app/generator/generator.component.styl
+++ b/src/app/generator/generator.component.styl
@@ -1,4 +1,18 @@
+@import '../../assets/css/extends.styl'
+
 :host
   max-width 1000px
   margin 20px auto
   display block
+
+.ingredients
+  display flex
+  flex-wrap wrap
+  padding 30px 0
+
+.ingredient_selected
+  margin 0 15px
+  padding 3px 5px 5px
+  border-radius 3px
+  background red
+  color $c-white
