--- a/src/app/generator/generator.component.html
+++ b/src/app/generator/generator.component.html
@@ -1,4 +1,11 @@
 <app-ingredients [ingredients]="ingredients" (selected)="toggleIngredient($event)"></app-ingredients>
 <div class="ingredients">
-  <div *ngFor="let selectIngredient of selectIngredients" class="ingredient_selected"> {{ selectIngredient }}</div>
+  <div *ngFor="let selectIngredient of selectIngredients"  class="ingredient_selected"> {{ selectIngredient }}</div>
+  <input type="search" [(ngModel)]="sort" placeholder="Search" name="search">
+</div>
+
+<div class="sandwiches-available">
+  <app-sandwich-card *ngFor="let sandwich of availableSandwich | filter: sort"
+                     [sandwich]="sandwich">
+  </app-sandwich-card>
 </div>
