signup empty component added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
       <mat-icon>settings</mat-icon>
       <span>Settings</span>
     </button>
-    <button *ngIf="!loginService.loggedIn" mat-menu-item routerLink="/signup">
+    <button *ngIf="!signUpService.signUp" mat-menu-item routerLink="/signup">
       <mat-icon>person_add</mat-icon>
       <span>Sign up</span>
     </button>
