--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,6 +6,6 @@
   <mat-input-container>
     <input matInput type="password" placeholder="Password" formControlName="password">
   </mat-input-container>
-  <a mat-raised-button color="accent" routerLink=".">Sign Up</a>
+  <a mat-raised-button color="accent" routerLink="/signup">Sign Up</a>
   <button mat-raised-button [disabled]="!loginForm.valid" color="primary" type="submit">Login</button>
 </form>
