--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,34 +1,62 @@
 <form [formGroup]="signUpForm">
-  <div class="title">Sign Up</div>
-  <mat-input-container>
-    <input matInput type="text" placeholder="Login" formControlName="login" autocomplete="off">
-  </mat-input-container>
-  <!--<mat-input-container>-->
-    <!--<input matInput type="email" placeholder="Email" formControlName="email" autocomplete="off">-->
-  <!--</mat-input-container>-->
+    <div class="title">Sign Up</div>
 
+    <mat-input-container>
+        <input matInput type="text" placeholder="Login" formControlName="login">
+        <mat-error *ngIf="!signUpForm.controls['login'].hasError('minLength' && 'required')">
+            Login should be more than 4 symbols
+        </mat-error>
+        <mat-error *ngIf="signUpForm.controls['login'].hasError('required')">
+            Login is <strong>required</strong>
+        </mat-error>
+    </mat-input-container>
 
-    <input  matInput type="email" placeholder="Email" formControlName="email" autocomplete="off" [formControl]="emailFormControl"
-           [errorStateMatcher]="matcher">
-    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-      Please enter a valid email address
-    </mat-error>
-    <mat-error *ngIf="emailFormControl.hasError('required')">
-      Email is <strong>required</strong>
-    </mat-error>
+    <mat-input-container>
+        <input matInput type="email" placeholder="Email" formControlName="email" name="email" autocomplete="off">
+        <mat-error
+                *ngIf="signUpForm.controls['email'].hasError('email') && !signUpForm.controls['email'].hasError('required')">
+            Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="signUpForm.controls['email'].hasError('required')">
+            Email is <strong>required</strong>
+        </mat-error>
+    </mat-input-container>
 
+    <mat-input-container>
+        <input matInput type="password" placeholder="Password" formControlName="password" autocomplete="new-password">
+        <mat-error *ngIf="!signUpForm.controls['password'].hasError('minLength' && 'required')">
+            Password should be more than 4 symbols
+        </mat-error>
+        <mat-error *ngIf="signUpForm.controls['password'].hasError('required')">
+            Email is <strong>required</strong>
+        </mat-error>
+    </mat-input-container>
 
-  <mat-input-container>
-    <input matInput type="password" placeholder="Password" formControlName="password" autocomplete="off">
-  </mat-input-container>
-  <mat-input-container>
-    <input matInput [matDatepicker]="picker" [matDatepickerFilter]="myFilter" placeholder="Your birth">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-input-container>
-  <mat-input-container>
-    <input matInput type="text" placeholder="FIO" formControlName="fio" autocomplete="off">
-  </mat-input-container>
-  <a mat-raised-button color="accent" routerLink=".">Sign Up</a>
-  <button (click)="resetForm()"  mat-raised-button color="primary">Reset</button>
+    <mat-input-container>
+        <input
+            matInput
+            formControlName="birth"
+            [matDatepicker]="picker"
+            [max]="maxDate"
+            placeholder="Your birth">
+
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngIf="signUpForm.controls['birth'].hasError('required')">
+            Set your birth date
+        </mat-error>
+        <mat-error *ngIf="!isValidBirth">
+            Should be older than 14 years old
+        </mat-error>
+    </mat-input-container>
+
+    <mat-input-container>
+        <input matInput type="text" placeholder="FIO" formControlName="fio" autocomplete="off">
+        <mat-error *ngIf="!signUpForm.controls['fio'].hasError('maxLength')">
+            Login shouldn't be more than 250 symbols
+        </mat-error>
+    </mat-input-container>
+
+    <button mat-raised-button color="accent" (click)="onSubmit()">Sign Up</button>
+    <button (click)="resetForm()" mat-raised-button color="primary">Reset</button>
 </form>
